[gd_scene load_steps=2 format=3 uid="uid://dvj16bw73cbsn"]

[ext_resource type="Script" uid="uid://c1l4ucdiwgv3j" path="res://chapter/chapter.gd" id="1_px6qp"]

[node name="Chapter" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_px6qp")
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="List" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChapterTitle" type="LineEdit" parent="ScrollContainer/List"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Title of the chapter (optional)"

[node name="ChapterBackground" type="TextEdit" parent="ScrollContainer/List"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Background on what happened before the start of the chapter"
wrap_mode = 1

[node name="Characters" type="HFlowContainer" parent="ScrollContainer/List"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ShowAllButton" type="CheckButton" parent="ScrollContainer/List/Characters"]
unique_name_in_owner = true
layout_mode = 2
text = "Show all"

[node name="ScrollStory" type="ScrollContainer" parent="ScrollContainer/List"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5

[node name="StoryParagraphs" type="VBoxContainer" parent="ScrollContainer/List/ScrollStory"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_changed" from="ScrollContainer/List/ChapterTitle" to="." method="_on_chapter_title_text_changed"]
[connection signal="pressed" from="ScrollContainer/List/Characters/ShowAllButton" to="." method="_on_show_all_button_pressed"]
[connection signal="resized" from="ScrollContainer/List/ScrollStory/StoryParagraphs" to="." method="_on_story_paragraphs_resized"]
